Fixing the narrow centre frequency display

--- a/app/scheduler/templates/subarray-config-container.html
+++ b/app/scheduler/templates/subarray-config-container.html
@@ -86,8 +86,7 @@
         ng-class="{'invalid-narrow-freq': !parent.vm.isNarrowBandFreqValid(1)}"
         class="fade-in narrow-freq-input-box ng-pristine ng-untouched ng-empty"
         ng-disabled="!$root.expertOrLO"
-        ng-model="vm.subarray.requested_narrow1_centre_frequency"
-        type="number">
+        ng-model="vm.subarray.requested_narrow1_centre_frequency">
     </div>
 
     <md-menu>
