--- a/app/scheduler/templates/subarray-config-container.html
+++ b/app/scheduler/templates/subarray-config-container.html
@@ -101,7 +101,7 @@
                     Select a product first...
                 </span>
             </md-menu-item>
-            <md-menu-item ng-repeat="dumpRate in parent.vm.dumpRatesMap[vm.subarray.product] | orderBy:dumpRate track by $index">
+            <md-menu-item ng-repeat="dumpRate in parent.vm.dumpRatesMap[vm.subarray.product] track by $index">
                 <md-button ng-click="parent.vm.setDumpRate(dumpRate.hz)">
                     {{dumpRate.hz + 'Hz (' + dumpRate.seconds + 's)'
                     + (parent.vm.defaultDumpRatesMap[vm.subarray.product]
