Prepend band and index for centre frequencies sub bands

--- a/app/scheduler/templates/subarray-config-container.html
+++ b/app/scheduler/templates/subarray-config-container.html
@@ -68,7 +68,7 @@
            </md-menu-item>
         <md-menu-item ng-repeat="freq in parent.vm.subBandsMap[vm.subarray.band] | orderBy:freq track by $index">
             <md-button ng-disabled="vm.subarray.state !== 'inactive'"  ng-click="parent.vm.setFrequency(freq)">
-                {{'' + freq/1000000 + ' MHz'}}
+                {{vm.subarray.band.toUpperCase() + $index +  ' : ' + freq/1000000 + ' MHz'}}
             </md-button>
         </md-menu-item>
        </md-menu-content>
