--- a/app/scheduler/templates/subarray-config-container.html
+++ b/app/scheduler/templates/subarray-config-container.html
@@ -58,7 +58,7 @@
     <md-menu>
         <span ng-disabled="!$root.expertOrLO" title="Selected On-sky Centre Frequency" ng-click="$root.expertOrLO && $mdMenu.open($event)"
             md-ink-ripple>
-             <i>f: </i><b>{{vm.subarray.requested_rx_centre_frequency==0 ? 'None' : vm.subarray.requested_rx_centre_frequency/1000000.}} MHz</b>
+             <i>f: </i><b>{{vm.subarray.requested_rx_centre_frequency==0 ? 'None' : parent.vm.displayFrequency}} MHz</b>
         </span>
        <md-menu-content>
            <md-menu-item ng-if="!vm.subarray.band">
@@ -66,9 +66,9 @@
                    Select a band and product first...
                </span>
            </md-menu-item>
-        <md-menu-item ng-repeat="freq in parent.vm.subBandsMap[vm.subarray.band] | orderBy:freq track by $index">
-            <md-button ng-disabled="vm.subarray.state !== 'inactive'"  ng-click="parent.vm.setFrequency(freq)">
-                {{'' + freq/1000000 + ' MHz'}}
+        <md-menu-item ng-repeat="(label, freq) in parent.vm.subBandsMap[vm.subarray.band]">
+            <md-button ng-disabled="vm.subarray.state !== 'inactive'"  ng-click="parent.vm.updateFrequency(label, freq)">
+                {{label + ' : ' + freq/1000000 + ' MHz'}}
             </md-button>
         </md-menu-item>
        </md-menu-content>
